--- a/flyway/conf/flyway.properties
+++ b/flyway/conf/flyway.properties
@@ -23,7 +23,7 @@
 flyway.driver=com.mysql.jdbc.Driver
 
 # Jdbc url to use to connect to the database
-flyway.url=jdbc\:mysql\://127.0.0.1\:3306/test
+flyway.url=jdbc\:mysql\://127.0.0.1\:3306/apts
 
 # User to use to connect to the database
 flyway.user=root
