--- a/src/config.properties
+++ b/src/config.properties
@@ -1,10 +1,11 @@
 #Database Configuration
-db.jdbcUrl =  jdbc:mysql://127.0.0.1:3306/aptsdb?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-db.user = root
-db.password = 123456
+DriverClass = com.mysql.jdbc.Driver
+JdbcUrl =  jdbc:mysql://127.0.0.1:3306/apts?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+User = root
+Password = 123456
 
 #Developmental Configuration
-devMode = true
+DevMode = true
 
 #System Configuration
 
